# open-llm-router

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LITELLM_COMPATIBILITY.md  README.md  backends.example.json  launchDaemon.sh  llm_proxy.py  manage.sh  pg_init.py  providers.json  pyproject.toml  requirements.txt  test_llm_proxy.py
conf/: __init__.py  backends.example.json  config-example.yml  models.example.json
launchDaemon/: com.github.rightson.open-llm-router.plist.template
launchDaemons/: com.github.rightson.open-llm-router.plist
ref/: claude.sh  gemini.sh  grok.sh  openai.sh
src/open_llm_router/: __init__.py
src/open_llm_router/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
src/open_llm_router/utils/: __init__.py  config.py  logger.py  model_router.py
src/openwebui_service/: __init__.py  llm_proxy.py  pg_init.py
src/openwebui_service/providers/: openai.py
src/openwebui_service/utils/: config.py  logger.py
templates/: __init__.py  init_template.sql
tests/: __init__.py  test_llm_proxy.py  test_llm_router.py
